# kira-spatial-3d

./: .gitignore  Cargo.toml  README.md  clippy.toml  deny.toml
.github/workflows/: ci.yml
crates/kira-spatial-3d/: Cargo.toml  README.md
crates/kira-spatial-3d-cli/: Cargo.toml  README.md
crates/kira-spatial-3d-cli/src/: lib.rs  main.rs  manifest.rs
crates/kira-spatial-3d-cli/tests/: integration.rs
crates/kira-spatial-3d-viewer/: Cargo.toml  README.md
crates/kira-spatial-3d-viewer/src/: camera.rs  lib.rs  loader.rs  main.rs  renderer.rs
crates/kira-spatial-3d-viewer/tests/: integration.rs
crates/kira-spatial-3d/benches/: hot_paths.rs
crates/kira-spatial-3d/examples/: heightmap_to_obj.rs
crates/kira-spatial-3d/src/: config.rs  lib.rs  types.rs
crates/kira-spatial-3d/src/contour/: marching_squares.rs  mod.rs  stitch.rs  types.rs
crates/kira-spatial-3d/src/export/: buffer.rs  floatfmt.rs  gltf.rs  metadata.rs  mod.rs  obj.rs  ply.rs  polyline.rs
crates/kira-spatial-3d/src/mapping/: height.rs  mod.rs  normalize.rs
crates/kira-spatial-3d/src/mesh/: heightmap.rs  mod.rs  streaming.rs
crates/kira-spatial-3d/src/metrics/: mod.rs  ridge.rs
crates/kira-spatial-3d/src/simd/: aarch64_neon.rs  mod.rs  scalar.rs  x86_avx2.rs
crates/kira-spatial-3d/tests/: contour.rs  export.rs  field_interop.rs  integration.rs  mesh.rs  metrics.rs  normalize.rs  property_tests.rs  streaming.rs
