[workspace]
members = [
    "crates/kira-spatial-3d",
    "crates/kira-spatial-3d-cli",
    "crates/kira-spatial-3d-viewer",
]
resolver = "2"

[workspace.package]
version = "0.2.0"
edition = "2024"
rust-version = "1.95"
license = "MIT"
repository = "https://github.com/ARyaskov/kira-spatial-3d"
keywords = [
    "bioinformatics",
    "spatial",
    "3d",
    "mesh",
    "oncology",
]
categories = [
    "science",
    "science::bioinformatics",
    "science::bioinformatics::genomics",
]

[workspace.dependencies]
kira-spatial-3d = { version = "0.2", path = "crates/kira-spatial-3d" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bytemuck = "1"
tempfile = "3"
proptest = { version = "1.5", default-features = false, features = ["std"] }
criterion = { version = "0.5", default-features = false, features = ["cargo_bench_support"] }
