[package]
name = "kira-spatial-3d-cli"
description = "Command-line interface for deterministic spatial 3D mesh and contour export."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories = [
    "science",
    "science::bioinformatics",
    "science::bioinformatics::genomics",
    "command-line-utilities",
]

[lib]
path = "src/lib.rs"

[[bin]]
name = "kira-spatial-3d"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { workspace = true }
serde_json = { workspace = true }
kira-spatial-3d.workspace = true

[dev-dependencies]
tempfile = { workspace = true }
