[package]
name = "kira-spatial-3d-viewer"
description = "Interactive GPU viewer for spatial 3D meshes, contours, and vector fields."
version = "0.1.0"
edition = "2024"
rust-version = "1.95"
license = "MIT"
repository = "https://github.com/ARyaskov/kira-spatial-3d"
keywords = [
    "bioinformatics",
    "spatial",
    "3d",
    "viewer",
    "oncology"
]
categories = [
    "science",
    "science::bioinformatics",
    "science::bioinformatics::genomics",
    "visualization"
]

[[bin]]
name = "kira-spatial-3d-viewer"
path = "src/main.rs"

[dependencies]
wgpu = "24"
winit = "0.29"
bytemuck = { version = "1", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
pollster = "0.3"
kira-spatial-3d = { path = "../kira-spatial-3d" }

[dev-dependencies]
tempfile = "3"
