[package]
name = "kira-spatial-3d-viewer"
description = "Interactive GPU viewer for spatial 3D meshes, contours, and vector fields."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories = [
    "science",
    "science::bioinformatics",
    "science::bioinformatics::genomics",
    "visualization",
]

[[bin]]
name = "kira-spatial-3d-viewer"
path = "src/main.rs"

[dependencies]
wgpu = "24"
winit = "0.29"
bytemuck = { workspace = true, features = ["derive"] }
serde = { workspace = true }
serde_json = { workspace = true }
pollster = "0.3"
kira-spatial-3d.workspace = true

[dev-dependencies]
tempfile = { workspace = true }
