[package]
name = "kira-spatial-3d"
description = "Deterministic 3D mesh, contour, and export primitives for spatial omics fields."
version = "0.1.0"
edition = "2024"
rust-version = "1.95"
license = "MIT"
repository = "https://github.com/ARyaskov/kira-spatial-3d"
keywords = [
    "bioinformatics",
    "spatial",
    "3d",
    "mesh",
    "oncology"
]
categories = [
    "science",
    "science::bioinformatics",
    "science::bioinformatics::genomics",
    "graphics"
]

[features]
default = []
gltf = []

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tempfile = "3"
