[package]
name = "kira-spatial-3d"
description = "Deterministic 3D mesh, contour, and export primitives for spatial omics fields."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories = [
    "science",
    "science::bioinformatics",
    "science::bioinformatics::genomics",
    "graphics",
]

[features]
default = []
gltf = []
# Optional dependency on `kira-spatial-field`. Enable when you want to
# wrap a `kira_spatial_field::Field` as a 3D `ScalarField` without
# manually copying its `values()` slice.
with-field = ["dep:kira-spatial-field"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
bytemuck = { workspace = true }
kira-spatial-field = { version = "0.2", optional = true }

[dev-dependencies]
tempfile = { workspace = true }
proptest = { workspace = true }
criterion = { workspace = true }
kira-spatial-field = "0.2"

[[bench]]
name = "hot_paths"
harness = false
